<resources>
    <string name="app_name">CostumerApp</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="description">image</string>
    <string name="propos">Propos</string>
    <string name="help">Help</string>
    <string name="contact">contact</string>
    <string name="profession">Profession</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="annuler">Annuler</string>
    <string name="enregistrer">Enregistrer</string>
</resources>