<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/optionHomeContact"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/optionMessageContact"
        android:title="@string/message"
        android:icon="@drawable/ic_message"
        android:enabled="true"/>

    <item
        android:id="@+id/optionAddContact"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        android:enabled="true"/>

    <item
        android:id="@+id/optionProfileContact"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        android:enabled="true"/>
</menu>