<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginLarge"
    android:layout_gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/prenom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/nom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/profession">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginOut">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enregistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:backgroundTint="#266127"
            android:textColor="@color/white"
            android:text="@string/enregistrer"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/annuler"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            app:backgroundTint="#E4B31616"
            android:textColor="@color/white"
            android:onClick="cancelSave"
            android:layout_toStartOf="@id/enregistrer"
            android:text="@string/annuler"/>

    </RelativeLayout>

</LinearLayout>