<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/marginOut"
    android:layout_marginStart="@dimen/marginOut"
    android:layout_marginTop="@dimen/marginOut">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/marginOut">

        <TextView
            android:id="@+id/tv_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/profession"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <TextView
            android:id="@+id/tv_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/tv_profession"
            android:text="@string/prenom"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/tv_lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_fname"
            android:text="@string/nom"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:layout_marginTop="3dp"
            android:ellipsize="end"
            />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>